# csci4052u

./: .gitignore  README.md  doc.md  pyproject.toml
src/csci4052u/: __init__.py
src/csci4052u/data/: __init__.py  fashionmnist.py
src/csci4052u/report/: __init__.py  summarize.py
src/csci4052u/training/: __init__.py
tests/: test_data.py
